--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -40,11 +40,11 @@
     -webkit-animation-duration: 1s;
 }
 
-.background-line .ansi {
+.background > span span {
     height: 100%;
 }
 
-.ansi {
+.ansi, .background > span span, .view > span span  {
     padding: 0px;
     margin: 0px;
     display: inline-block;
@@ -52,7 +52,7 @@
     padding-bottom: 1px;
 }
 
-.line, .background-line {
+.background > span, .view > span, .line, .background-line {
     word-wrap: break-word;
     word-break: break-all;
     display: inline-block;
@@ -64,7 +64,7 @@
     position: absolute;
 }
 
-.ansi .hr {
+.ansi .hr, .background > span .hr, .view > span .hr {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -72,82 +72,86 @@
     width: 100%;
 }
 
-.line hr {
+.view > span hr, .line hr {
     border: 0px;
 }
 
-.background-line {
+.background > span, .background-line {
     overflow: hidden;
 }
 
-.line .b {
+.view > span .b {
     font-weight: bold;
 }
 
-.line .i {
+.view > span .i {
     font-style: italic;
 }
 
-.line .o {
+.view > span .o {
     text-decoration: overline;
 }
 
-.line .u {
+.view > span .u {
     text-decoration: underline;
 }
 
-.line .du {
+.view > span .du {
     text-decoration: underline;
     border-bottom: 1px solid currentColor;
     padding-bottom: 0px;
 }
 
-.line .s {
+.view > span .s {
     text-decoration: line-through;
 }
 
-.line .o.du {
+.view > span .o.du {
     text-decoration: underline overline;
 }
 
-.line .u.o {
+.view > span .u.o {
     text-decoration: underline overline;
 }
 
-.line .o.s {
+.view > span .o.s {
     text-decoration: overline line-through;
 }
 
-.line .du.s {
+.view > span .du.s {
     text-decoration: underline line-through;
 }
 
-.line .s.u {
+.view > span .s.u {
     text-decoration: underline line-through;
 }
 
-.line .du.u.o {
+.view > span .du.u.o {
     text-decoration: underline overline;
 }
 
-.line .du.s.u {
+.view > span .du.s.u {
     text-decoration: underline line-through;
 }
 
-.line .du.o.s {
+.view > span .du.o.s {
     text-decoration: underline overline line-through;
 }
 
-.line .u.s.o {
+.view > span .u.s.o {
     text-decoration: underline overline line-through;
 }
 
-.line .du.o.s.u {
+.view > span .du.o.s.u {
     text-decoration: underline overline line-through;
 }
 
 /* --- End CSS for ansi display --- */
 
+.view > span a,
+.view > span a:link,
+.view > span a *,
+.view > span a:link *,
 .line a,
 .line a:link,
 .line a *,
