Display: change split scroll button disabled styles

--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -154,8 +154,8 @@
 }
 
 .scroll-split-button.disabled {
-    color: GreyText;
-    cursor: not-allowed;
+    color: GrayText;
+    cursor: default;
 }
 
 .scroll-split-button.active {
