Themes: cleanup button focus colors

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -808,7 +808,7 @@ body {
     color: wheat;
 }
 
-.button.on:active {
+.button.on:active, .button.on:focus {
     background-color: maroon;
     color: wheat;
 }
