Area designer: Fixed text selection for room preview

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -712,7 +712,7 @@ cause test to be brighter but more bold looking
     background-color: black;
     padding: 0px;
     margin: 0px;
-    user-select: initial;
+    user-select: text;
 }
 
 .property-grid {
