Fix drake monster icon

--- a/src/css/monsters.scss
+++ b/src/css/monsters.scss
@@ -358,7 +358,7 @@ $monsters: "./../../assets/monsters";
 }
 
 .monster-drake {
-    background-image: url(#{$monsters}/dc-mon/animals/fire_drake.png);
+    background-image: url(#{$monsters}/dc-mon/fire_drake.png);
 }
 
 .monster-elephant {
