Display: Make selected background color transparent

--- a/src/css/mail.scss
+++ b/src/css/mail.scss
@@ -589,6 +589,7 @@ table.dataTable {
     box-sizing: border-box;
     white-space: pre;
     overflow: hidden;
+    opacity: 0.85;
 }
 
 .select-text.trc, .find-highlight.trc {
