--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -430,6 +430,7 @@ body {
     box-sizing: border-box;
     white-space: pre;
     overflow: hidden;
+    opacity: 0.85;
 }
 
 .select-text.trc, .find-highlight.trc {
