--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -56,7 +56,7 @@ body {
 
 #commandbox {
     left: 2px;
-    right: 20px;
+    right: 60px;
     height: 18px;
     bottom: 2px;
 }
@@ -776,6 +776,27 @@ body {
 
 
 /** button stats */
+
+
+#history-dropup {
+    text-align: center;
+    border-radius: 4px;
+    border: 0px;
+    background-color: transparent;
+}
+
+#history-dropup .fa {
+    margin-top: 1px;
+}
+
+#history-dropup:hover {
+    background-color: #{$buttonHoverColor};
+    color: #{$buttonTextHoverColor};
+}
+
+#history-dropup:active {
+    background-color: #{$buttonActiveBack};
+}
 
 #advedit {
     top: 3px;
