--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -40,7 +40,7 @@ body {
 
 #commandbox {
     left: 2px;
-    right: 20px;
+    right: 60px;
     height: 18px;
     bottom: 2px;
 }
@@ -757,6 +757,25 @@ body {
 
 
 /** button stats */
+
+#history-dropup {
+    text-align: center;
+    border-radius: 4px;
+    border: 0px;
+    background-color: transparent;  
+}
+
+#history-dropup .fa {
+    margin-top: 1px;
+}
+
+#history-dropup:hover {
+    background-color: #d70000;
+}
+
+#history-dropup:active {
+    background-color: #790000;
+}
 
 #advedit {
     top: 3px;
