--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -48,7 +48,7 @@ body {
 
 #commandbox {
     left: 5px;
-    right: 24px;
+    right: 64px;
     height: 18px;
     bottom: 5px;
 }
@@ -780,6 +780,26 @@ body {
 /** end stats **/
 
 /** button stats */
+
+#history-dropup {
+    text-align: center;
+    border-radius: 4px;
+    border: 0px;
+    background-color: transparent;  
+}
+
+
+#history-dropup .fa {
+    margin-top: 1px;
+}
+
+#history-dropup:hover {
+    background-color: #d70000;
+}
+
+#history-dropup:active {
+    background-color: #790000;
+}
 
 #advedit {
     top: 5px;
