--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -40,7 +40,7 @@ body {
 
 #commandbox {
     left: 2px;
-    right: 60px;
+    right: 96px;
     height: 18px;
     bottom: 2px;
 }
@@ -774,6 +774,41 @@ body {
 }
 
 #history-dropup:active {
+    background-color: #790000;
+}
+
+.command-history {
+    right: 58px;
+    top: 3px;
+}
+
+#btnTriggers {
+    right: 22px;
+}
+ 
+#btnParsing {
+    right: 40px;
+}
+
+#btnTriggers, #btnParsing {
+    top: 3px;
+    text-align: center;
+    border-radius: 4px;
+    border: 0px;
+    height: 16px;
+    width: 16px;
+    background-color: transparent;
+}
+
+#btnTriggers.on, #btnParsing.on {
+    background-color: #d70000;
+}
+
+#btnTriggers:hover, #btnParsing:hover, #btnTriggers.on:active, #btnParsing.on:active {
+    background-color: #d70000;
+}
+
+#btnTriggers:active, #btnParsing:active, #btnTriggers.on:hover, #btnParsing.on:hover {
     background-color: #790000;
 }
 
