--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -56,7 +56,7 @@ body {
 
 #commandbox {
     left: 2px;
-    right: 60px;
+    right: 96px;
     height: 18px;
     bottom: 2px;
 }
@@ -795,6 +795,43 @@ body {
 }
 
 #history-dropup:active {
+    background-color: #{$buttonActiveBack};
+}
+
+.command-history {
+    right: 58px;
+    top: 3px;
+}
+
+#btnTriggers {
+    right: 22px;
+}
+ 
+#btnParsing {
+    right: 40px;
+}
+
+#btnTriggers, #btnParsing {
+    top: 3px;
+    text-align: center;
+    border-radius: 4px;
+    border: 0px;
+    height: 16px;
+    width: 16px;
+    background-color: transparent;
+}
+
+#btnTriggers.on, #btnParsing.on {
+    background-color: #{$buttonHoverColor};
+    color: #{$buttonTextHoverColor};
+}
+
+#btnTriggers:hover, #btnParsing:hover, #btnTriggers.on:active, #btnParsing.on:active {
+    background-color: #{$buttonHoverColor};
+    color: #{$buttonTextHoverColor};
+}
+
+#btnTriggers:active, #btnParsing:active, #btnTriggers.on:hover, #btnParsing.on:hover {
     background-color: #{$buttonActiveBack};
 }
 
