Status: increase combat/party bar label font and add tooltip with full name

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -375,6 +375,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    font-size: 1em;
 }
 
 .combat-bar .progressbar {
