Themes: tweaks to health bars to better handle zooming

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -721,6 +721,11 @@ body {
     color: wheat;
 }
 
+#hp-status span {
+    overflow: hidden;
+    display: inline-block;
+}
+
 .progressbar .progressbar-text {
     left: 20px;
     right: 0px;
