--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -723,6 +723,11 @@ body {
     color: #{$color};
 }
 
+#hp-status span {
+    overflow: hidden;
+    display: inline-block;
+}
+
 .progressbar .progressbar-text {
     left: 20px;
     right: 0px;
