--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -206,6 +206,43 @@ body {
     overflow: hidden;
 }
 
+#buttonbar.scroll {
+    /*
+    padding-top: 18px;
+    padding-bottom: 18px;
+    */
+}
+
+#bb-scroll-up, #bb-scroll-down {
+    left: 2px;
+    position: absolute;
+    text-align: center;
+    width: 32px;
+    z-index: 100000;
+    height: 16px;
+    margin-top: 0;
+}
+
+#bb-scroll-up:focus, #bb-scroll-down:focus {
+    /*
+    color: inherit !important;
+    background-color: inherit !important;
+    */
+}
+
+#bb-scroll-up .fa, #bb-scroll-down .fa {
+    margin-top: 0;
+    font-size: 16px;
+}
+
+#bb-scroll-up {
+    top: 2px;
+}
+
+#bb-scroll-down {
+    bottom: 2px;
+}
+
 .command-history {
     position: absolute !important;
     top: 2px;
