--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -67,6 +67,10 @@ body {
     bottom: 2px;
 }
 
+#bb-scroll-down {
+    bottom: 0;
+}
+
 .scroll-track {
     background-color: #191814;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
