--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -83,6 +83,10 @@ body {
     bottom: 2px;
 }
 
+#bb-scroll-down {
+    bottom: 0;
+}
+
 .scroll-track {
     background-color: #{$panelBack};
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
