--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -938,6 +938,10 @@ body {
     text-decoration: none;
 }
 
+.button:hover .overlay, .button.on:hover {
+    background-color: rgba(255,255,255, 0.40);
+}
+
 #connect img {
     background: url(#{$images}/icons/png/connect.black.png) no-repeat;
     padding-left: 50px;
