Remove orange outline for more buttons

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -251,3 +251,12 @@ input.input-dropdown::-webkit-calendar-picker-indicator  {
     background-position: right;
     border-left: 1px solid #CCCCCC;    
 }
+
+button:focus,
+button:active:focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button.active.focus {
+  outline: none !important;
+}
