--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -205,3 +205,12 @@
     background-color: ThreeDLightShadow;
     cursor: default;
 }
+
+button:focus,
+button:active:focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button.active.focus {
+  outline: none !important;
+}
