Fix mouse cursor to use standard text cursor Fix more unicode surrogate/variant pair selection issues

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -50,6 +50,7 @@
     display: inline-block;
     padding-top: 1px;
     padding-bottom: 1px;
+    cursor: text;
 }
 
 .background > span, .view > span, .line, .background-line {
