--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -465,7 +465,6 @@ body {
     height: 50px;
     top: 3px;
     left: 3px;
-    right: 3px;
     background-color: black;
     border: 1px solid #{$borderColor};
 }
@@ -928,3 +927,14 @@ body {
 }
 
 /** button end */
+
+#drag-bar {
+    left: -3px;
+    top: -7px;
+    height: initial;
+    bottom: -14px;    
+}
+
+#ghost-bar {
+    background-color: #d70000;
+}
