--- a/src/css/mail.scss
+++ b/src/css/mail.scss
@@ -65,7 +65,7 @@ body {
     background-color: transparent;
     height: 100%;
     width: 3px;
-    cursor: col-resize;
+    cursor: ew-resize;
     position: absolute;
     top: 0px;
     right: 0;
@@ -77,7 +77,7 @@ body {
     background-color: #000;
     opacity: 0.5;
     position: absolute;
-    cursor: col-resize;
+    cursor: ew-resize;
     z-index: 999;
 }
 
@@ -85,7 +85,7 @@ body {
     background-color: transparent;
     height: 3px;
     width: 100%;
-    cursor: row-resize;
+    cursor: ns-resize;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -97,7 +97,7 @@ body {
     background-color: #000;
     opacity: 0.5;
     position: absolute;
-    cursor: row-resize;
+    cursor: ns-resize;
     z-index: 999;
 }
 
@@ -461,7 +461,7 @@ table.dataTable {
 #display-split-bar {
     background-color: menu;
     height: 4px;
-    cursor: row-resize;
+    cursor: ns-resize;
     position: absolute;
     background-color: menu;
     z-index: 1000;
@@ -477,7 +477,7 @@ table.dataTable {
     background-color: transparent;
     opacity: 0.5;
     position: absolute;
-    cursor: row-resize;
+    cursor: ns-resize;
     z-index: 9991;
     box-sizing: border-box;
 }
