--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -107,7 +107,7 @@ body {
 #display-split-bar {
     background-color: menu;
     height: 4px;
-    cursor: row-resize;
+    cursor: ns-resize;
     position: absolute;
     background-color: menu;
     z-index: 1000;
@@ -123,7 +123,7 @@ body {
     background-color: transparent;
     opacity: 0.5;
     position: absolute;
-    cursor: row-resize;
+    cursor: ns-resize;
     z-index: 9991;
     box-sizing: border-box;
 }
@@ -594,7 +594,7 @@ dialog {
     background-color: transparent;
     height: 100%;
     width: 3px;
-    cursor: col-resize;
+    cursor: ew-resize;
     position: absolute;
     left: -3px;    
 }
@@ -604,6 +604,6 @@ dialog {
     background-color: #000;
     opacity: 0.5;
     position: absolute;
-    cursor: col-resize;
+    cursor: ew-resize;
     z-index: 999
 }
