--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -916,5 +916,11 @@ body {
 }
 
 #drag-bar {
-    left: -2px;    
+    left: -2px;
+    transition: 0s background-color;
+}
+
+#drag-bar:hover{
+    background-color: #d4d4d4;    
+    transition-delay: 1s;
 }
