--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -329,42 +329,51 @@ body {
     position: absolute;
     overflow: hidden;
     box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;    
 }
 
 #environmentleft {
-    position: relative;
+    position: absolute;
     top: 15px;
-    left: 0px;
+    left: calc(50% - 75px);
     float: left;
     width: 50px;
     height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;       
 }
 
 #environmentcenter {
-    position: relative;
+    position: absolute;
     top: 5px;
-    left: 0px;
-    float: left;
+    left: calc(50% - 25px);
     width: 50px;
     height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;       
 }
 
 #environmentright {
-    position: relative;
+    position: absolute;
     top: 15px;
-    left: 0px;
-    float: left;
+    right: calc(50% - 75px);
     width: 50px;
     height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;       
 }
 
 #environmentweather {
-    position: relative;
+    position: absolute;
     top: 0px;
     left: 0px;
-    width: 150px;
-    height: 50px;
+    right: 0px;
+    bottom: 0px;
     z-index: 100;
+    background-repeat: no-repeat;
+    background-size: cover;    
+    height: 100%;
 }
 
 #character-name {
