--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -433,6 +433,7 @@ body {
     height: 50px;
     top: 3px;
     left: 3px;
+    right: 3px;
     background-color: black;
     border: 1px solid #{$borderColor};
 }
