--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -466,6 +466,7 @@ body {
     height: 50px;
     top: 3px;
     left: 3px;
+    right: 3px;
     background-color: #{$panelInsetBackground};
     border: 1px solid #{$borderColor};
 }
