--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -446,6 +446,7 @@ body {
     height: 50px;
     top: 3px;
     left: 3px;
+    right: 3px;
     background-color: #{$panelInsetBack};
     border: 1px solid #{$panelInsetBorder};
     color: #{$panelInsetColor};
