--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -942,12 +942,12 @@ body {
 
 /** button end */
 
-#ghost-bar {
+#status-ghost-bar {
     background-color: #{$panelBack};
     border: 1px solid #{$panelInsetBorder};
 }
 
-#drag-bar {
+#status-drag-bar {
     left: -2px;
     top: -7px;
     height: initial;
@@ -955,7 +955,7 @@ body {
     transition: 0s background-color, 0s border;
 }
 
-#drag-bar:hover{
+#status-drag-bar:hover{
     background-color: #{$panelBack};
     border: 1px solid #{$panelInsetBorder};  
     transition-delay:1s;
