--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -992,16 +992,16 @@ body {
 
 /** button end */
 
-#ghost-bar {
+#status-ghost-bar {
     background-color: #666;
 }
 
-#drag-bar {
+#status-drag-bar {
     left: 0px;
     transition: 0s background-color;
 }
 
-#drag-bar:hover{
+#status-drag-bar:hover{
     background-color: #666;    
     transition-delay: 1s;
 }
