--- a/src/css/help.scss
+++ b/src/css/help.scss
@@ -457,7 +457,7 @@ body {
     background: rgb(116, 192, 114);
 }
 
-#drag-bar {
+#help-drag-bar {
     background-color: transparent;
     height: 100%;
     float: right;
@@ -465,7 +465,7 @@ body {
     cursor: ew-resize;
 }
 
-#ghost-bar {
+#help-ghost-bar {
     width: 3px;
     background-color: #000;
     opacity: 0.5;
