--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -19,6 +19,10 @@ textarea {
     min-height: 100% !important;
 }
 
+.tox.tox-tinymce {
+    height: auto !important;
+    min-height: 100% !important;
+}
 
 /*Container body*/
 
@@ -70,6 +74,10 @@ i.mce-i-fa-send:before {
     left: 10px;
 }
 
+i.mce-i-fa-sendraw, i.mce-i-fa-open {
+    font-size: 26px !important;
+}
+
 i.mce-i-fa-sendraw:before {
     content: "\f061";
     font-family: FontAwesome;
@@ -81,7 +89,6 @@ i.mce-i-fa-sendraw:before {
 i.mce-i-fa-open:before {
     content: "\f07c";
     font-family: FontAwesome;
-    position: absolute;
     top: 6px;
     left: 8px;
 }
