Profile Manager:   Fix trigger type select width   Add variable editing support using raw serilized data string  Fix Select control selected color text

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -34,7 +34,7 @@ dialog {
 }
 
 .bootstrap-select .selected.active, .bootstrap-select .selected.active:hover {
-    color: black;
+    /*color: black;*/
 }
 
 .bootstrap-select .dropdown-menu {
