Hide priority but for 0 state Copy state to new state 0 when old removed Clean up dropdown styles

--- a/src/css/profiles.scss
+++ b/src/css/profiles.scss
@@ -396,3 +396,16 @@ table tr:last-child td {
 .has-error a {
     color: #A94442;
 }
+
+#trigger-states-dropdown.dropdown-menu>li>a>span {
+    background: white;
+}
+
+#trigger-states-dropdown.dropdown-menu>.active>a>span {
+    background: inherit;
+}
+
+#trigger-states-dropdown.dropdown-menu>.active>a>span,
+#trigger-states-dropdown.dropdown-menu>li>a:hover>span {
+    background: inherit;
+}
